# CargoSim

./: .gitignore  AGENTS.md  CHANGELOG.md  DEBUG_AND_CLEANUP_FEATURES.md  ENHANCED_FEATURES.md  PROJECTMAP.md  README.md  README.txt  cargo_sim.py  cargo_sim_config.json  cargo_sim_with_gui.py  pyproject.toml  requirements_qt.txt  test_enhanced_features.py
cargosim/: __init__.py  __main__.py  config.py  gui.py  main.py  qt_theme_manager.py  recorder.py  renderer.py  simulation.py  smart_targeting.py  ui_style.py  ui_theme.py  unified_theme_manager.py  utils.py
docs/: SMART_TARGETING_README.md
tests/: README.md  conftest.py  test_advanced_simulation.py  test_cli_entrypoints.py  test_config.py  test_enhanced_features.py  test_fullscreen.py  test_ops_gate.py  test_recorder.py  test_simulation.py  test_smart_targeting.py  test_utils.py
